<resources>
    <string name="string_register">注册</string>
    <string name="string_login">登录</string>
    <string name="string_forget_password">忘记密码</string>
    <string name="string_reset_password">重置密码</string>
    <string name="string_modify_password">修改密码</string>
    <string name="string_modify_save">保存修改</string>
    <string name="string_back">返回</string>
    <string name="string_exit">退出</string>
    <string name="string_input_cellphone">请输入手机号码</string>
    <string name="string_input_cellphone_code">请输入手机验证码</string>
    <string name="string_input_password">请输入6~12位密码</string>
    <string name="string_input_account_password">请输入账户密码</string>
    <string name="string_input_new_password">请输入新密码</string>
    <string name="string_input_new_password_confirm">请确认新密码</string>
    <string name="string_input_password_confirm">请确认密码</string>
    <string name="string_get_cellphone_code">点击获取验证码</string>
    <string name="string_get_cellphone_code_delay">s后重新获取</string>
    <string name="string_get_password_back">忘记密码</string>
    <string name="string_toast_cellphone">请输入有效的手机号码</string>
    <string name="string_toast_cellphone_code">请输入手机验证码</string>
    <string name="string_toast_password">请输入6~12位密码</string>
    <string name="string_toast_password_confirm">请确认密码</string>
    <string name="string_toast_password_different">密码不一致</string>
    <string name="string_toast_cellphone_different">手机号码发生改变</string>
    <string name="string_toast_network_error">网络错误</string>
    <string name="string_toast_unknown_error">未知错误</string>
    <string name="string_toast_register_error">注册失败</string>
    <string name="string_toast_reset_password_error">重置密码失败</string>
    <string name="string_toast_old_password_error">原密码错误</string>
    <string name="string_toast_params">输入参数错误</string>
    <string name="string_toast_params_cellphone_code_error">验证码错误</string>
    <string name="string_toast_cellphone_code_send">验证码已发送</string>
    <string name="string_toast_account_login_error">手机号码或密码错误</string>
    <string name="string_toast_cellphone_repeat">手机号码已经注册,请直接登录</string>
    <string name="string_toast_cellphone_no">手机号码没有注册,请直接注册</string>
    <string name="string_toast_timeout">登录超时，请重新登录</string>
    <string name="string_new_version">发现新版本</string>
    <string name="string_new_version_upgrade">请您务必更新</string>

    <string name="string_login_tao_bao">淘宝登录</string>
    <string name="string_tao_promotion_info">导购推广信息</string>
    <string name="string_tao_promotion">导购推广</string>
    <string name="string_tao_position">导购推广位</string>
    <string name="string_tao_promotion_position_create">创建导购推广位</string>
    <string name="string_tao_wei_xin">请输入您的微信号码</string>
    <string name="string_tao_tip">系统会自动帮您创建微信导购推广信息</string>
    <string name="string_tao_create">一键创建</string>
    <string name="string_tao_promotion_new_name">淘妈咪导购推广</string>
    <string name="string_tao_position_new_name">淘妈咪微信导购推广位</string>
    <string name="string_url_agreement">/webapp/widgets/static/agreement.html</string>

    <integer name="integer_emoji_pointer_left">0x1F448</integer>
    <integer name="integer_emoji_pointer_right">0x1F449</integer>
    <integer name="integer_emoji_pointer_up">0x1F446</integer>
    <integer name="integer_emoji_hand_clap">0x1F44F</integer>
    <integer name="integer_emoji_hand_victor">0x270C</integer>
    <integer name="integer_emoji_phone">0x1F4F1</integer>
    <integer name="integer_emoji_paper_clip">0x1F4CE</integer>

    <string name="platform" >Android</string>
</resources>
