<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_act_brand_back"
        style="@style/nav_header_of_act">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/string_tao_promotion_info"
            android:textSize="24dp" />

        <Button
            android:id="@+id/bt_act_brand_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:text="@string/string_back" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_act_brand_back">

        <LinearLayout
            android:id="@+id/ll_act_brand_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/string_tao_promotion"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/string_tao_position"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_act_brand_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ll_act_brand_title"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/lv_act_brand_promotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:divider="#CCCCCC"
                android:dividerHeight="2px"
                android:scrollbars="none"
                android:drawSelectorOnTop="true"
                android:gravity="center_horizontal" />

            <ListView
                android:id="@+id/lv_act_brand_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:divider="#CCCCCC"
                android:dividerHeight="2px"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_act_brand_create"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80CCCCCC"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/string_tao_promotion_position_create"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/et_act_brand_wei_xin_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/string_tao_wei_xin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/string_tao_tip" />

                <Button
                    android:id="@+id/bt_act_brand_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/string_tao_create" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pb_act_brand_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>